Ready for deployments

--- a/joke/templates/index.html
+++ b/joke/templates/index.html
@@ -10,6 +10,8 @@
 		<p style="text-align:center;color:white;font-size:3em;">What did one snowman say to the other? Do you smell carrots?</p>
 		</blockquote>
 	</figure>
-	<a href="{{url}}" style="bottom:0px;background-color:blue;padding:10px;border-radius:5px;color:white;text-decoration:none;">Hello</a>
+	{% if True %}
+	<a href="{{url}}" style="bottom:0px;background-color:blue;padding:10px;border-radius:5px;color:white;text-decoration:none;">Next</a>
+	{% endif %}
 </body>
 </html>
