Ready for deployments

--- a/joke/templates/index.html
+++ b/joke/templates/index.html
@@ -7,7 +7,7 @@
 <body style="margin: 0;position: absolute;top: 50%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);background-color:red;">
 	<figure class="text-center">
 		<blockquote class="blockquote">
-		<p style="text-align:center;color:white;font-size:3em;">What did one snowman say to the other? Do you smell carrots?</p>
+		<p style="text-align:center;color:white;font-size:3em;">{{joke}}</p>
 		</blockquote>
 	</figure>
 	{% if url %}
